# dawnbench_inference_imagenet

./: CMakeLists.txt  CalibrationTableresnet50_2  CalibrationTableresnet50_4  GammaContext.h  README.md  test.cpp
model/: resnet50.prototxt
